--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           <div class="team-img"> <img src="images/Team/ttn-image-2024-05-01-133242680.png" class="img-responsive" alt="">
             <div class="team-desc">
               <h5>JESSICA SA-ONOY</h5>
-              <p>Web Developer and Desigher</p>
+              <p>Web Developer and Designer</p>
               <ul class="team-social-icon">
                 <li><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook-f"></i></a></li>
                 <li><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
