--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 <div class="bg-sec">
   <div class="container">
     <div class="col-md-10 col-sm-10 col-xs-8">
-      <h3>Premium quality free onepage template</h3>
+      <h3>Premium quality</h3>
       <p></p>
     </div>
-    <div class="col-md-2 col-sm-2 col-xs-4"> <a class="btn-down" href="#">Download</a> </div>
+    <div class="col-md-2 col-sm-2 col-xs-4"> <a class="btn-down" href="#">Join Us</a> </div>
   </div>
 </div>
 <!--Service-Section-Start-->
